apps/base/mailu/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mailu
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: "Host(`mail.${MAILU_DOMAIN1}`) || Host(`mail.${MAILU_DOMAIN2}`) || Host(`mail.${MAILU_DOMAIN3}`)"
      services:
        - name: mailu-front
          port: 80
  tls:
    secretName: mailu-certificates
