apps/base/mailu/route-imap.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mailu-imap
spec:
  entryPoints:
    - imap
  routes:
    - match: HostSNI(`*`)
      services:
        - name: "mailu-front"
          namespace: "mailserver"
          port: imap
          proxyProtocol:
            version: 2
