apps/base/mailu/route-pop3.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mailu-pop3
spec:
  entryPoints:
    - pop3
  routes:
    - match: HostSNI(`*`)
      services:
        - name: "mailu-front"
          namespace: "mailserver"
          port: pop3
          proxyProtocol:
            version: 2
