apps/base/mailu/route-smtpd.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mailu-smtpd
spec:
  entryPoints:
    - smtpd
  routes:
    - match: HostSNI(`*`)
      services:
        - name: "mailu-front"
          namespace: "mailserver"
          port: smtpd
          proxyProtocol:
            version: 2
