apps/base/mailu/route-smtps.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mailu-smtps
spec:
  entryPoints:
    - smtps
  routes:
    - match: HostSNI(`*`)
      services:
        - name: "mailu-front"
          namespace: "mailserver"
          port: smtps
          proxyProtocol:
            version: 2
